--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "awesome-typescript-loader": "~0.16.2",
     "es6-promise": "3.0.2",
     "es6-shim": "0.35.0",
+    "gulp": "^3.9.1",
     "reflect-metadata": "0.1.2",
     "source-map-loader": "^0.1.5",
     "typescript": "~1.8.9",
