--- a/client/package.json
+++ b/client/package.json
@@ -24,9 +24,10 @@
     "source-map-loader": "^0.1.5",
     "typescript": "~1.8.9",
     "typings": "^0.7.9",
-    "webpack": "^1.12.9",
+    "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.0",
-    "webpack-merge": "^0.8.4"
+    "webpack-merge": "^0.8.4",
+    "webpack-stream": "^3.2.0"
   },
   "dependencies": {
     "@angular/http": "2.0.0-rc.1",
