--- a/client/package.json
+++ b/client/package.json
@@ -30,15 +30,17 @@
     "webpack-stream": "^3.2.0"
   },
   "dependencies": {
-    "@angular/http": "2.0.0-rc.1",
     "@angular/common": "2.0.0-rc.1",
     "@angular/compiler": "2.0.0-rc.1",
     "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/platform-server": "2.0.0-rc.1",
     "@angular/router": "2.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.1",
+    "@ngrx/core": "^1.0.0",
+    "@ngrx/store": "^2.0.0",
     "core-js": "^2.2.0",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "~0.6.12"
